<resources>
    <string name="app_name">Guess</string>
    <string name="you_get_it">You get it</string>
    <string name="bigger">Bigger</string>
    <string name="please_enter_a_number">Please enter a number(1-10)</string>
    <string name="ok">ok</string>
    <string name="dialog_title">Message</string>
    <string name="smaller">Smaller</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="excellent_number_is">Excellent! The number is</string>
</resources>
